<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.niu.cs.z1764108.shipping.MainActivity">

    <TextView
        android:text="@string/weightString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleLabel"
        android:textSize="24sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/titleLabel"
        android:layout_centerHorizontal="true"
        android:id="@+id/weightEditText"
        android:hint="@string/zeroString"
        android:textAlignment="center" />

    <TextView
        android:text="@string/ouncesString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightEditText"
        android:layout_centerHorizontal="true"
        android:id="@+id/ouncesLabel"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ouncesLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp">

        <TextView
            android:text="@string/baseCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/baseCostLabel"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:text="@string/zeroDollarString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/baseTextView"
            android:layout_row="0"
            android:layout_column="16"
            android:layout_gravity="end"/>

        <TextView
            android:text="@string/addedCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addedCostLabel"
            android:layout_column="0"
            android:layout_row="1"/>

        <TextView
            android:text="@string/zeroDollarString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addedTextView"
            android:layout_column="16"
            android:layout_row="1"
            android:layout_gravity="end"/>

        <TextView
            android:text="@string/totalCostString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalCostLabel"
            android:layout_column="0"
            android:layout_row="2"/>

        <TextView
            android:text="@string/zeroDollarString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTextView"
            android:layout_column="16"
            android:layout_row="2"
            android:layout_gravity="end"/>

    </GridLayout>

    <Button
        android:text="Help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="getHelp" />
</RelativeLayout>
